--- a/learn-certs-pr/courses/az-303t00.yml
+++ b/learn-certs-pr/courses/az-303t00.yml
@@ -8,13 +8,13 @@ courseNumber: 'AZ-303T00-A'
 hoursToComplete: 120
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Обеспечение безопасности удостоверений с помощью Azure Active Directory, а также пользователей и групп.
+- skill: Обеспечение безопасности удостоверений с помощью Azure Active Directory, а также пользователей и групп
 - skill: Внедрение решений для идентификации, включающих локальные и облачные возможности
-- skill: Применение решений по контролю для сбора, объединения и анализа данных из разных источников.
-- skill: Управление подписками, учетными записями, политиками Azure, а также управление доступом на основе ролей.
-- skill: Администрирование Azure с помощью Resource Manager, Azure portal, Cloud Shell, и CLI.
-- skill: Настройка межсайтовых решений для подключения, таких как пиринг виртуальных сетей и шлюзы виртуальных сетей.
-- skill: Администрирование Azure App Service, Azure Container Instances и Kubernetes.
+- skill: Применение решений по контролю для сбора, объединения и анализа данных из разных источников
+- skill: Управление подписками, учетными записями, политиками Azure, а также управление доступом на основе ролей
+- skill: Администрирование Azure с помощью Resource Manager, Azure portal, Cloud Shell, и CLI
+- skill: Настройка межсайтовых решений для подключения, таких как пиринг виртуальных сетей и шлюзы виртуальных сетей
+- skill: Администрирование Azure App Service, Azure Container Instances и Kubernetes
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -30,7 +30,7 @@ summary: |-
   Этот курс позволяет Архитекторам решений (Solutions Architects) научиться преобразовывать бизнес-требования в безопасные, масштабируемые и надежные решения. Включены уроки по виртуализации, автоматизации, сетевому взаимодействию, хранению, идентификации, безопасности, платформе данных и инфраструктуре приложений. Этот курс описывает, как различные решения в каждой области влияют на общее решение.
 
   #### Профиль аудитории
-  Этот курс предназначен для IT-специалистов, имеющих опыт разработки и внедрения решений, работающих на Microsoft Azure. Они должны обладать обширным знанием IТ-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформы данных, бюджетирование и управление. Azure Solution Architects используют Azure Portal, и по мере того, как они становятся более опытными, они начинают использовать интерфейс командной строки (CLI). Кандидаты должны быть экспертами в администрировании Azure и иметь опыт работы с процессами разработки Azure и процессами DevOps. Нет маркеров или списков.
+  Этот курс предназначен для IT-специалистов, имеющих опыт разработки и внедрения решений, работающих на Microsoft Azure. Они должны обладать обширным знанием IТ-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформы данных, бюджетирование и управление. Azure Solution Architects используют Azure Portal, и по мере того, как они становятся более опытными, они начинают использовать интерфейс командной строки (CLI). Кандидаты должны быть экспертами в администрировании Azure и иметь опыт работы с процессами разработки Azure и процессами DevOps.
 prerequisitesSection: |-
   Успешные архитекторы Azure Solution начинают эту роль с работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения и сетями.
   - Понимание локальных технологий виртуализации, включая&#58; виртуальные машины, виртуальные сети и виртуальные жесткие диски.
@@ -49,7 +49,7 @@ outlineSection: |-
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Планирование реализации виртуальных машин
-  - Создание виртуальных машин.
+  - Создание виртуальных машин
   - Настройка доступности виртуальной машины, включая наборы масштабов
   - Понимание параметров высокой доступности для виртуальных машин в Azure
 
@@ -57,7 +57,7 @@ outlineSection: |-
   ### Модуль 2&#58; Автоматизация развертывания и настройки ресурсов
   В этом модуле вы узнаете об инструментах, которые администратор Azure использует для управления своей инфраструктурой. К ним относятся шаблоны Azure Portal, Cloud Shell, Azure PowerShell, CLI и Resource Manager. Этот модуль включает в себя&#58;
   #### Уроки
-  - Шаблоны Azure Resource Manager.
+  - Шаблоны Azure Resource Manager
   - Сохранение шаблона для виртуальной машины
   - Оценка местонахождения новых ресурсов
   - Настройка шаблона виртуального жесткого диска
@@ -177,7 +177,7 @@ outlineSection: |-
 
 
   ### Модуль 9&#58; Управление рабочими нагрузками в Azure
-  В этом модуле вы узнаете, как переносить рабочие нагрузки с помощью Azure Migrate, выполнять миграции на основе агентов и без агентов, а также выполнять резервное копирование с помощью Azure Backup и восстанавливать сайты с помощью Azure Site Recovery.
+  В этом модуле вы узнаете, как переносить рабочие нагрузки с помощью Azure Migrate, выполнять миграции на основе агентов VMware и без агентов, а также выполнять резервное копирование с помощью Azure Backup и восстанавливать сайты с помощью Azure Site Recovery.
   #### Уроки
   - Перенос рабочих нагрузок с помощью Azure Migrate
   - VMware - Миграция без агента
@@ -189,7 +189,7 @@ outlineSection: |-
   После завершения этого модуля студенты смогут следующее&#58;
   - Понимание архитектуры миграции на основе агентов
   - Подготовка к Azure для миграции
-  - Подготовка среды для локальной Vmware
+  - Подготовка среды для локальной VMware
   - Понимание архитектуры резервного копирования Azure VM backup
   - Управление обновлениями и исправлениями для виртуальных машин Azure
 
@@ -250,15 +250,15 @@ outlineSection: |-
 
 
   ### Модуль 14&#58; Реализация баз данных NoSQL
-  В этом модуле вы узнаете о хранилище таблиц Azure Table Storage и рекомендуемых вариантах для API-интерфейсов Cosmos DB.
+  В этом модуле вы узнаете о хранилище таблиц Azure Table Storage и рекомендуемых вариантах для API-интерфейсов CosmsoDB.
   #### Уроки
   - Настройка таблиц учетных записей хранения
-  - Выбор соответствующих API-интерфейсов Cosmos DB
+  - Выбор соответствующих API-интерфейсов CosmosDB
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Описание Table Service Data Model
   - Понимание параметров Azure Cosmos DB
-  - Понимание высокой доступности с помощью Cosmos DB
+  - Понимание высокой доступности с помощью CosmosDB
 
 
   ### Модуль 15&#58; Реализация баз данных SQL Azure
@@ -272,3 +272,4 @@ outlineSection: |-
   - Создание единой базы данных Azure SQL Database single database
   - Создание управляемого экземпляра базы данных Azure SQL Database Managed Instance
   - Рекомендация архитектурных моделей высокой доступности, используемые в базе данных SQL Azure
+
