--- a/learn-certs-pr/courses/az-304t00.yml
+++ b/learn-certs-pr/courses/az-304t00.yml
@@ -65,7 +65,7 @@ outlineSection: |-
   После завершения этого модуля студенты смогут следующее&#58;
   - Контролировать ресурсы Azure с помощью Azure Monitor
   - Собирать и анализировать журналы ресурсов (Resource Logs) для ресурсов Azure
-  - Понимать, как Azure Sentinel собирает данные об устройствах, пользователях, инфраструктуре и приложениях.
+  - Понимать, как Azure Sentinel собирает данные об устройствах, пользователях, инфраструктуре и приложениях
 
 
   ### Модуль 3&#58; Разработка аутентификации
@@ -177,7 +177,7 @@ outlineSection: |-
   ### Модуль 11&#58; Проектирование для высокой доступности
   В этом модуле вы узнаете о решениях для резервирования приложений и рабочих нагрузок, включая вычисления, базу данных и хранилище.
   #### Уроки
-  - Рекомендации по решениям для резервирования приложений и рабочей нагрузки.
+  - Рекомендации по решениям для резервирования приложений и рабочей нагрузки
   - Рекомендовать решения для автомасштабирования
   - Определение ресурсов, требующих высокой доступности
   - Определение типов хранилища для высокой доступности
@@ -244,3 +244,4 @@ outlineSection: |-
   - Оценивать локальные серверы и приложения для миграции
   - Предлагать решения для миграции приложений и виртуальных машин
   - Определение области миграции, включая избыточные, связанные, тривиальные и устаревшие данные
+
