--- a/learn-certs-pr/courses/ms-203t00.yml
+++ b/learn-certs-pr/courses/ms-203t00.yml
@@ -66,7 +66,7 @@ outlineSection: |-
 
 
   ### Модуль 2&#58; Управление и устранение неполадок в потоке почты
-  В этом модуле вы изучите компоненты почтового потока и научитесь управлять почтовым потоком, что является важной задачей для каждого администратора Exchange. Вы изучите различия между управлением потоком почты в Exchange Online, Exchange Server и гибридных развертываниях Exchange. От управления потоком почты вы перейдете к устранению неполадок, связанных с потоком почты, такими как неправильная маршрутизация электронной почты в вашей организации или за ее пределами, или  невозможность установить безопасные соединения. Вы узнаете об инструментах, которые Microsoft предоставляет, чтобы помочь вам найти причину ваших проблем и наладить поток почты. Затем вы перейдете от устранения неполадок в потоке почты к устранению неполадок, связанных с транспортировкой, таких как проблемы с сетью, проблемы с соединителями и агентами, проблемы архитектуры, а также способы устранения неполадок в сосуществовании. Наконец, вы узнаете, как проверять журналы событий, протоколов и отслеживания, когда устранены все неполадки, связанные с доступностью службы и передачей сообщений, а проблема все еще сохраняется, или если вам нужно найти исторические данные о проблемах в прошлом.
+  В этом модуле вы изучите компоненты почтового потока и научитесь управлять почтовым потоком, что является важной задачей для каждого администратора Exchange. Вы изучите различия между управлением потоком почты в Exchange Online, Exchange Server и гибридных развертываниях Exchange. От управления потоком почты вы перейдете к устранению неполадок, связанных с потоком почты, такими как неправильная маршрутизация электронной почты в вашей организации или за ее пределами, или невозможность установить безопасные соединения. Вы узнаете об инструментах, которые Microsoft предоставляет, чтобы помочь вам найти причину ваших проблем и наладить поток почты. Затем вы перейдете от устранения неполадок в потоке почты к устранению неполадок, связанных с транспортировкой, таких как проблемы с сетью, проблемы с соединителями и агентами, проблемы архитектуры, а также способы устранения неполадок в сосуществовании. Наконец, вы узнаете, как проверять журналы событий, протоколов и отслеживания, когда устранены все неполадки, связанные с доступностью службы и передачей сообщений, а проблема все еще сохраняется, или если вам нужно найти исторические данные о проблемах в прошлом.
   #### Уроки
   - Управление потоком почты
   - Устранение неполадок потока почты
@@ -106,7 +106,7 @@ outlineSection: |-
   - Создание гигиенических фильтров
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Объяснение использования и функций Exchange Online Protection.
+  - Объяснение использования и функций Exchange Online Protection
   - Планирование маршрутизации сообщений для Exchange Online Protection
   - Изучение доступных отчетов и журналов EOP
   - Понимание различных полей заголовка сообщения, относящихся к защите от спама и спуфинга
@@ -143,7 +143,7 @@ outlineSection: |-
   - Знание того, для чего используются журналы аудита почтового ящика и администратора
   - Понимание поиска контента для поиска сообщений в вашей организации
   - Описание случаев eDiscovery и eDiscovery на месте для Exchange
-  - Управление делами Advanced eDiscovery в Центре безопасности и соответствия требованиям.
+  - Управление делами Advanced eDiscovery в Центре безопасности и соответствия требованиям
 
 
   ### Модуль 5&#58; Управление организационными настройками
@@ -177,11 +177,11 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; внедрение ActiveSync
-  - Внедрение Active Sync для одного и нескольких почтовых ящиков
+  - Внедрение Active Sync для одного и нескольких почтовых ящиков.
 
   После завершения этого модуля студенты смогут следующее&#58;
   - Описание того, как работает Exchange ActiveSync
-  - настройка политик почтовых ящиков мобильных устройств
+  - Настройка политик почтовых ящиков мобильных устройств
   - Понимание управления мобильными устройствами в Microsoft 365
   - Настройка доступа для мобильных устройств
   - Понимание компонентов инфраструктуры мобильных устройств
@@ -207,8 +207,8 @@ outlineSection: |-
   - Создание пользовательских ролей управления и их назначение с помощью политик назначения ролей пользователям
   - Устранение неполадок ролей управления RBAC
   - Описание встроенных ролей конечных пользователей
-  - Настройка политик назначения ролей.
-  - Создание новых пользовательских ролей и политик назначения ролей.
+  - Настройка политик назначения ролей
+  - Создание новых пользовательских ролей и политик назначения ролей
   - Понимание разницы между общими разрешениями и разделенными разрешениями
   - Описание разрешения для нескольких лесов
   - Выявление различий между моделями разрешений
@@ -234,7 +234,7 @@ outlineSection: |-
   - Создание и управление настройками почтового ящика
   - Создание и управление ресурсными и общими почтовыми ящиками
   - Создание и управление почтовыми контактами и почтовыми пользователями
-  - Создание и управление разрешениями получателей.
+  - Создание и управление разрешениями получателей
   - Создание и управление группами
   - Описание списков адресов
   - Объяснение того, как настроить списки адресов
@@ -261,9 +261,9 @@ outlineSection: |-
   - Объяснение квот для общих папок
   - Оценка альтернатив общим папкам
   - Описание особенностей внедрения общих папок
-  - Развертывание почтовых ящиков общих папок.
+  - Развертывание почтовых ящиков общих папок
   - Управление разрешениями для общих папок
-  - Создание и управление общими папками с поддержкой почты.
+  - Создание и управление общими папками с поддержкой почты
   - Мониторинг общих папок
   - Устранение неполадок общих папок
   - Устранение неполадок доступа к общей папке
@@ -282,12 +282,12 @@ outlineSection: |-
   - Описание параметров подключения, доступных для подключения локального Exchange к Microsoft 365
   - Перечисление и описание компонентов гибридного развертывания
   - Описание Azure Active Directory Connect (Azure AD Connect)
-  - Определение параметров идентификации Microsoft 365 для гибридной системы Exchange.
-  - Сравните делегированную федерацию Exchange с OAuth.
+  - Определение параметров идентификации Microsoft 365 для гибридной системы Exchange
+  - Сравните делегированную федерацию Exchange с OAuth
   - Планирование гибридной конфигурации Exchange
   - Описание передачи организационной конфигурации
   - Объяснение Exchange Modern Hybrid и Hybrid Agent
-  - Планирование параметров потока почты для гибридного развертывания.
+  - Планирование параметров потока почты для гибридного развертывания
 
 
   ### Модуль 11&#58; Выполнение миграции почтового ящика
@@ -303,8 +303,8 @@ outlineSection: |-
   - Использование FastTrack для перемещения почтовых ящиков
   - Описание требования для миграции IMAP и как она выполняется
   - Перемещение данных почтового ящика с помощью миграции IMAP
-  - Описание требования как для прямой, так и для поэтапной миграции.
-  - Выполнение миграции и перенос почтовых ящиков с помощью прямой или поэтапной миграции.
+  - Описание требования как для прямой, так и для поэтапной миграции
+  - Выполнение миграции и перенос почтовых ящиков с помощью прямой или поэтапной миграции
   - Импорт файлов PST в почтовые ящики Exchange Online
   - Перенос общих папок в Exchange Online
 
@@ -318,16 +318,16 @@ outlineSection: |-
   - Устранение неполадок гибридного развертывания
 
   #### Лабораторная работа&#58; развертывание гибридной среды
-  - Настройка гибридного развертывание.
+  - Настройка гибридного развертывание
   - Проверьте ваше гибридное развертывания
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Описание назначения и функций пограничных транспортных серверов.
-  - Объяснение требований к инфраструктуре для пограничных транспортных серверов.
+  - Описание назначения и функций пограничных транспортных серверов
+  - Объяснение требований к инфраструктуре для пограничных транспортных серверов
   - Описание EdgeSync
-  - Планирование потока сообщений с пограничного транспортного сервера.
+  - Планирование потока сообщений с пограничного транспортного сервера
   - Описание предварительных условий для запуска мастера гибридной конфигурации Office 365
-  - Объяснить лучшие практики для реализации гибридного развертывания.
+  - Объяснить лучшие практики для реализации гибридного развертывания
   - Управление гибридным развертыванием
   - Описание того, когда необходимо настроить сосуществование общих папок с Office 365
   - объясните, как настроить Oauth для смешанной среды Exchange
@@ -337,3 +337,4 @@ outlineSection: |-
   - Устранение неполадок транспортировки с помощью Exchange Online
   - Устранение неполадок клиентского доступа в сосуществовании
   - Устранение неполадок службы репликации почтовых ящиков
+
