--- a/learn-certs-pr/exams/77-419.yml
+++ b/learn-certs-pr/exams/77-419.yml
@@ -20,7 +20,7 @@ levels:
 - beginner
 skills:
 - Создание и форматирование содержимого (25–30%)
-- управление SharePoint sites (30-35%)
+- Управление сайтами SharePoint (30-35%)
 - Участие в сообществах пользователей (15-20%)
 - Настройка и использование результатов поиска по сайту (15-20%)
 roles:
@@ -31,7 +31,7 @@ relatedCertifications:
 - related:
     uid: none
 resources:
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Панель управления сертификацией
