--- a/learn-certs-pr/exams/dp-201.yml
+++ b/learn-certs-pr/exams/dp-201.yml
@@ -15,7 +15,7 @@ summary: |-
 
   Инженеры данных Azure отвечают за задачи, проектных связанные с данными, включая разработку решений для хранения данных Azure, использующих реляционные и нереляционные хранилища данных, решения для пакетной обработки данных и обработки данных в реальном времени, а также решения для обеспечения безопасности и соответствия требованиям.
 
-  Кандидаты на этот экзамен должны уметь разработать решения для данных, использующие следующие службы Azure&#58; Azure Cosmos SQL, Azure Synapse Analytics, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks, и хранилище BLOB-объектов Azure.
+  Кандидаты на этот экзамен должны уметь разработать решения для данных, использующие следующие службы Azure&#58; Azure Cosmos DB, Azure Synapse Analytics, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks, и хранилище BLOB-объектов Azure.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разработка решений для хранения данных Azure; решения для обработки проектных данных; и проектирование для обеспечения безопасности данных и соответствия требованиям.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRMb
@@ -32,7 +32,7 @@ skills:
 - Содержание этого экзамена будет обновлено 31 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Разработка решений для хранения данных Azure (40-45%)
 - Решения для обработки проектных данных (25-30%)
-- Проектирование для обеспечения безопасности данных и соответствия требованиям (25-30%)
+- Разработка для безопасности данных и соответствия (25-30%)
 roles:
 - data-engineer
 products:
@@ -63,13 +63,16 @@ relatedCertifications:
 - related:
     uid: certification.azure-data-engineer
 resources:
+- title: Путешествие к сертификации
+  description: Узнайте о том, как пройти сертификацию на Azure Data Engineer Associate, а также о ресурсах, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4ARli
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
