--- a/learn-certs-pr/exams/dp-300.yml
+++ b/learn-certs-pr/exams/dp-300.yml
@@ -12,10 +12,10 @@ summary: |-
 
   'Azure Database Administrator внедряет и управляет функциональными аспектами облачных и гибридных решений на платформе данных, созданными на основе служб данных Microsoft Azure и Microsoft SQL Server.' Azure Database Administrator должен уметь использовать различные методы и инструменты для выполнения повседневных операций, включая применение знаний об использовании T-SQL для административного управления.
 
-  Эта роль отвечает за управление, доступность, безопасность и мониторинг производительности, а также оптимизацию современных решений для реляционных баз данных. Специалисты этой роли работают с совместно ролью Azure Data Engineer  для управления функциональными аспектами решений на платформе данных.
+  Эта роль отвечает за управление, доступность, безопасность и мониторинг производительности, а также оптимизацию современных решений для реляционных баз данных. Специалисты этой роли работают с совместно ролью Azure Data Engineer для управления функциональными аспектами решений на платформе данных.
 
   <div style='font-weight&#58; bold;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href="/learn/certifications/certification-exams#participating-in-beta-exams">ценности и важности бета-версий экзаменов</a>.</div>
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование и реализация ресурсов платформы данных; внедрение безопасной среды; контроль и оптимизация операционных ресурсов; оптимизация производительности запросов;  автоматизация задач; планирование и внедрение среды высокой доступности и аварийного восстановления (HADR); и осуществление администрирования с помощью T-SQL.'
+subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование и реализация ресурсов платформы данных; внедрение безопасной среды; контроль и оптимизация операционных ресурсов; оптимизация производительности запросов; автоматизация задач; планирование и внедрение среды высокой доступности и аварийного восстановления (HADR); и осуществление администрирования с помощью T-SQL.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4q3yZ
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=DP-300&examname=Exam%20DP-300:%20Administering%20Relational%20Databases%20on%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-300
@@ -48,13 +48,16 @@ relatedCertifications:
 - related:
     uid: certification.azure-database-administrator-associate
 resources:
+- title: Путешествие к сертификации
+  description: Узнайте о том, как пройти сертификацию в качестве Azure Database Administrator Associate, и какие ресурсы помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AGXA
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
