--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -8,12 +8,14 @@ displayName: MS-900
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 8 июля 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 8 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
   </div>
 
-  Этот экзамен направлен на кандидатов, желающих продемонстрировать фундаментальные знания нюансов и преимуществ в использовании облачных сервисов в целом и использовании модели Software as a Service (SaaS). Этот экзамен также оценивает знания о доступных опциях и преимуществах, полученных при реализации предложений по облачным сервисам Microsoft 365.
+  Этот экзамен направлен на кандидатов, желающих продемонстрировать фундаментальные - уровне знания нюансов и преимуществ в использовании облачных сервисов в целом и использовании модели Software as a Service (SaaS). Кандидаты должны знать об имеющихся возможностях и преимуществах, полученных благодаря внедрению облачных сервисов Microsoft 365.
 
-  Этот экзамен можно сдать в качестве предшествующего уровня экзаменов по облачным вычислениям и технологиям, таким как Office 365, Microsoft Intune, Azure Information Protection (AIP) и Windows 10.
+  Кандидаты должны обладать необходимыми знаниями, чтобы рекомендовать решения, которые помогут урегулировать общие организационные ИТ-проблемы, а также должны уметь отличать решения Microsoft 365 от конкурентов на рынке. Кандидаты также должны обладать фундаментальными знаниями о предложениях, оптимизации лицензирования для обеспечения экономической эффективности и вариантах поддержки организаций.
+
+  Кандидаты должны уметь различать службы и продукты Microsoft (Microsoft 365, Azure и Dynamics 365).
 subTitle: Докажите, что вы понимаете облачные концепты; основные сервисы и концепты Microsoft 365; концепты безопасности, соответствия требованиям, конфиденциальности и доверия в Microsoft 365, а также ценообразование и поддержку Microsoft 365.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVw
@@ -31,11 +33,11 @@ providers:
 levels:
 - beginner
 skills:
-- Содержание этого экзамена будет обновлено 8 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Описание облачных концепций (15-20%)
+- Содержание этого экзамена было обновлено 8 июля 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Описание облачных концепций (10-15%)
 - Описание основных служб и концепций Microsoft 365 (30-35%)
-- Описание параметров безопасности, соответствия, конфиденциальности и доверия в Microsoft 365 (25-30%)
-- Описание опций ценообразования и поддержки Microsoft 365  (25-30%)
+- Объяснение безопасности, соответствия, конфиденциальности и доверия к Microsoft 365 (30-35%)
+- Описание ценообразования и поддержки Microsoft 365 (20-25%)
 roles:
 - administrator
 products:
