--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -7,33 +7,33 @@ uid: exam.pl-900
 displayName: PL-900
 summary: |-
   <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 13 июля 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 13 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
   </div>
 
-  Кандидатами на этот экзамен являются пользователи, которые стремятся повысить производительность труда благодаря пониманию возможностей Power Platform, автоматизации основных бизнес-процессов с помощью Power Automate, выполнению базового анализа данных с помощью Power BI для получения опыта бизнес-аналитики и более эффективной работы путем создания простого приложения Power Apps Canvas и мощных чат-ботов без использования кода.
-subTitle: Этот экзамен позволяет оценить вашу способность понимать ценность Power Platform для бизнеса; понимать основные компоненты Power Platform; продемонстрировать деловую ценность Power BI; и продемонстрировать деловую ценность Microsoft Automate.
+  Кандидаты на сдачу этого экзамена стремятся повысить свою производительность за счет понимания возможностей Power Platform, автоматизации основных бизнес-процессов с помощью Power Automate, выполнения базового анализа данных с помощью Power BI, более эффективной работы за счет создания простых приложений Power Apps и создания мощных чат-ботов с использованием Power Virtual Agents.
+subTitle: Этот экзамен позволяет оценить вашу способность описать деловую ценность Power Platform; определить основные компоненты Power Platform; демонстрировать возможности Power BI; описывать возможности Power Apps; демонстрировать возможности Power Automate; и демонстрировать деловую ценность Power Virtual Agents.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
 practiceTestUrl: https://www.mindhub.com/p/MU-PL-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 locales:
 - en
 providers:
-  - providerType: pearson-vue
-    examUrl: 'https://examregistration.microsoft.com/?locale=ru-ru&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
-  - providerType: certiport
-    examUrl: http://www.certiport.com/locator
-  - providerType: gsi
-    examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer   
+- providerType: pearson-vue
+  examUrl: 'https://examregistration.microsoft.com/?locale=ru-ru&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
+- providerType: gsi
+  examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
 levels:
 - beginner
 skills:
-- Содержание этого экзамена будет обновлено 13 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Описание деловой ценности Power Platform (20-25 %)
+- Содержание этого экзамена было обновлено 13 июля 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Описание деловой ценности Power Platform (15-20%)
 - Определение основных компонентов Power Platform (15-20%)
-- Описание деловой ценности Power BI (10-15%)
-- Описание деловой ценности Power Apps (15-20%)
-- Описание деловой ценности Power Automate (15-20%)
-- Демонстрация деловой ценности мощных виртуальных агентов Power Virtual Agents (10-15%).
+- Демонстрация возможностей Power BI (15-20%)
+- Описание возможностей Power Apps (15-20%)
+- Демонстрация возможностей Power Automate (15-20%)
+- Демонстрация деловой ценности мощных виртуальных агентов Power Virtual Agents (10-15%)
 roles:
 - developer
 products:
@@ -55,7 +55,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
