--- a/learn-certs-pr/exams/az-220.yml
+++ b/learn-certs-pr/exams/az-220.yml
@@ -21,6 +21,7 @@ summary: |-
 subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие задачи: реализация инфраструктуры IoT-решений; обеспечение и управление устройствами; внедрение решений на устройствах Azure IoT Edge; обработка и управление данными; отслеживание, устранение неполадок и оптимизация решений IoT; и обеспечение безопасности.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4nBeC
+practiceTestUrl: https://www.mindhub.com/p/MU-AZ-220?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-220&examname=Exam%20AZ-220:%20Microsoft%20Azure%20IoT%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-220
 locales:
 - en
@@ -55,7 +56,7 @@ relatedCertifications:
     uid: certification.azure-iot-developer-specialty
 resources:
 - title: Путешествие к сертификации
-  description: Узнайте о том, как получить сертификат Azure IoT Developer Specialty и какие ресурсы помогут вам подготовиться.
+  description: Узнайте о том, как пройти сертификацию в качестве Azure IoT Developer Specialty, и какие ресурсы помогут вам подготовиться.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqz
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
@@ -63,7 +64,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
