--- a/learn-certs-pr/exams/mb-901.yml
+++ b/learn-certs-pr/exams/mb-901.yml
@@ -8,7 +8,7 @@ displayName: MB-901
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 10 июля 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 10 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
   </div>
 
   Данный экзамен охватывает позиционирование и преимущества применения Dynamics 365.
@@ -29,7 +29,7 @@ providers:
 levels:
 - beginner
 skills:
-- Содержание этого экзамена будет обновлено 10 июля 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
+- Содержание этого экзамена было обновлено 10 июля 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
 - Определение компонентов платформы Microsoft для Dynamics 365 (30-35%)
 - Описание искусственного интеллекта и смешанной реальности в Dynamics 365 (10-15%)
 - Описание управляемых моделями приложений (25-30%)
