--- a/learn-certs-pr/exams/pl-100.yml
+++ b/learn-certs-pr/exams/pl-100.yml
@@ -5,11 +5,13 @@ metadata:
   description: 'Exam PL-100: Microsoft Power Platform App Maker (beta)'
 uid: exam.pl-100
 displayName: PL-100
-summary: "<div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>\r\n  \r\nПроизводители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты должны разбираться в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовый дизайн UX, анализ требований, анализ процессов и т. д.<br/><br/>\r\n\r\nРазработчики приложений создают и обеспечивают выполнение бизнес-процессов, структурирует цифровой сбор информации, повышает эффективность повторяемых задач и автоматизирует бизнес-процессы.\r\n\r\nРазработчики приложений используют инструменты Power Platform для решения бизнес-задач. Они могут иметь опыт работы с Visual Basic для приложений, сводными таблицами Excel, командами и другими инструментами. Они должны иметь базовое понимание моделей данных, пользовательского интерфейса и процессов. Разработчики приложений знают о возможностях и ограничениях доступных инструментов и понимают, как их применять.\r\n\r\nРазработчики приложений ориентированы на самостоятельную работу и на решение задач. Возможно они не проходили формальное обучение по ИТ, но им удобно использовать технологии для решения бизнес-задач и они настроены на личностный рост. Они понимают оперативную потребность и видят желаемый результат. Они подходят к проблемам с использованием поэтапных и итеративных стратегий.  \r\n\r\n<div style='font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; Этот экзамен станет доступен ориентировочно 17 июля 2020 года.</div>"
-subTitle: 'Этот экзамен будет доступен 17 июля 2020 года или около того. Этот экзамен оценивает вашу способность выполнять следующие технические задачи: проектирование решений; создание решений; анализ данных; внедрение решений и управление ими.'
+summary: "<div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>\r\n  \r\nПроизводители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты должны разбираться в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовый дизайн UX, анализ требований, анализ процессов и т. д.<br/><br/>\r\n\r\nРазработчики приложений создают и обеспечивают выполнение бизнес-процессов, структурирует цифровой сбор информации, повышает эффективность повторяемых задач и автоматизирует бизнес-процессы.\r\n\r\nРазработчики приложений используют инструменты Power Platform для решения бизнес-задач. Они могут иметь опыт работы с Visual Basic для приложений, сводными таблицами Excel, командами и другими инструментами. Они должны иметь базовое понимание моделей данных, пользовательского интерфейса и процессов. Разработчики приложений знают о возможностях и ограничениях доступных инструментов и понимают, как их применять.\r\n\r\nРазработчики приложений ориентированы на самостоятельную работу и на решение задач. Возможно они не проходили формальное обучение по ИТ, но им удобно использовать технологии для решения бизнес-задач и они настроены на личностный рост. Они понимают оперативную потребность и видят желаемый результат. Они подходят к проблемам с использованием поэтапных и итеративных стратегий.\r\n\r\n<div style='font-weight&#58; bold;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href=\"/learn/certifications/certification-exams#participating-in-beta-exams\">ценности и важности бета-версий экзаменов</a>.</div>"
+subTitle: 'Этот экзамен оценивает вашу способность выполнять следующие технические задачи: проектирование решений; создание решений; анализ данных; внедрение решений и управление ими.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wo07
 providers:
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=PL-100&examname=Exam%20PL-100:%20Microsoft%20Power%20Platform%20App%20Maker&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-100
 - providerType: gsi
   examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
 locales:
@@ -61,6 +63,18 @@ products:
 - power-bi
 - power-apps
 - power-virtual-agents
+paths:
+- uid: learn-bizapps.create-powerapps
+- uid: learn-bizapps.create-app-models-business-processes
+- uid: learn-bizapps.automate-process-using-flow
+- uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
+- uid: learn-dynamics.get-started-using-common-data-service
+- uid: learn-bizapps.understand-advanced-topics
+- uid: learn-bizapps.best-practices-environments
+- uid: learn-bizapps.create-use-analytics-reports-power-bi
+- uid: learn-bizapps.bring-ai
+- uid: learn-bizapps.ui-controls-canvas-app-powerapps
+- uid: learn-bizapps.create-business-process-flow
 relatedCertifications:
 - related:
     uid: certification.power-platform-app-maker
@@ -71,7 +85,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
